--- a/index .html
+++ b/index .html
@@ -4,6 +4,22 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>سياحة تامشكط | Tamchekett Tourism</title>
+<!-- SEO Meta Tags -->
+<meta name="description" content="موقع سياحي شامل عن تامشكط في ولاية الحوض الغربي - تاريخ، قرى، آثار، زراعة وسياحة في موريتانيا.">
+<meta name="keywords" content="تامشكط, سياحة تامشكط, الحوض الغربي, موريتانيا, قرى تامشكط, بلديات تامشكط">
+<meta name="author" content="ZEINE">
+
+<!-- Google Verification (تضيفه لاحقاً من Search Console) -->
+<meta name="google-site-verification" content="ضع-الكود-هنا">
+
+<!-- Open Graph (مهم عند مشاركة الرابط في فيسبوك) -->
+<meta property="og:title" content="سياحة تامشكط - Tamchekett Tourism">
+<meta property="og:description" content="اكتشف التاريخ العريق والقرى والبلديات التابعة لتامشكط في موريتانيا">
+<meta property="og:image" content="https://username.github.io/tamchekett-tourism/images/cover.jpg">
+<meta property="og:type" content="website">
+<meta name="robots" content="index, follow">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<link rel="icon" href="images/favicon.png">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
